--- a/public/css/header.css
+++ b/public/css/header.css
@@ -14,9 +14,9 @@
 }
 
 .header-logo img {
-    width: 48px;
-    height: 48px;
-    border-radius: 50%;
+    width: 300px;
+    height:100px;
+    border-radius: 10px;
     background: white;
     padding: 4px;
 }
@@ -55,6 +55,7 @@
     cursor: pointer;
     font-size: 24px;
     color: orange;
+
 }
 
 
@@ -62,11 +63,13 @@
 .header-icons {
     display: flex;
     gap: 0.5rem;
+    align-items: center;
 }
 
 .header-icons button {
     background: white;
     width: 50px;
+    height: 50px;
     color: #FF6B00;
     border: none;
     padding: 0.5rem;
