update tombol hapus wishlist dan header z-index

--- a/public/css/header.css
+++ b/public/css/header.css
@@ -2,6 +2,7 @@
 .header-wrapper {
      position: sticky;
     top: 0;
+      z-index: 9999; 
     background-color: #FF6B00; /* Warna orange */
     color: white;
     padding: 1rem 1.5rem;
