--- a/public/css/header.css
+++ b/public/css/header.css
@@ -21,7 +21,7 @@
     width: 300px;
     height:100px;
     border-radius: 10px;
-    background: white;
+    /* background: white; */
     padding: 4px;
 }
 
